w5 clean arch fixes
